--- a/index.css
+++ b/index.css
@@ -37,8 +37,8 @@ header{
     margin: 0 auto;
     width: 100%;
     height: 156px;
-
 }
+
 #header-container{
     width: 1050px;
     height: 156px;
@@ -292,21 +292,83 @@ header{
 }
 
 #slider {
+    position: relative;
     width: 100%;
     height: 370px;
     overflow: hidden;
     margin-bottom: 40px;
 }
+@media (min-width: 320px) and (max-width: 1050px) {
+    #slider {
+      width: 1050px;
+    }
+}
+
+#slider-left-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 100;
+    width: 52px;
+    height: 52px;
+    border: 0px;
+    outline: 0px;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s ease 0s;
+    opacity: 0;
+    margin-left: -525px;
+    background: url(https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_banner_left_52_52.svg) 50% 50% no-repeat;
+}
+
+#slider-right-button{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 100;
+    width: 52px;
+    height: 52px;
+    border: 0px;
+    outline: 0px;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s ease 0s;
+    margin-left: 525px;
+    opacity: 0;
+    background: url(https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_banner_right_52_52.svg) 50% 50% no-repeat;
+}
+.slider-numbering {
+    position: absolute;
+    bottom: 20px;
+    right: 120px;
+    z-index: 100;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    width: 55px;
+    height: 23px;
+    line-height: 23px;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 12px;
+    background: rgba(0, 0, 0, 0.15);
+}
+
 
 #slider .slides {
     display: block;
-    width: 600vw;
+    width: 20000px;
     height: 100%;
 }
+#slider .slides div{
+    width: 100%;
+}
+
+
 
 #slider .slide {
     float: left;
-    width: 100vw;
     height: 370px;
 }
 
@@ -319,9 +381,20 @@ header{
     background-repeat: no-repeat;
 }
 
+@media (min-width: 320px) and (max-width: 1050px) {
+    #slider .slides div{
+        width: 1050px;
+    }   
+}
+@media (min-width: 1050px) {
+    #slider .slides div{
+        width: 100vw;
+    }   
+}
 
-#img-1 {background-color: rgb(152, 255, 121);}
-#img-2 {background-color: rgb(121, 255, 237);}
+
+.img-1 {background-image: url("https://img-cf.kurly.com/banner/main/pc/img/b9a92f33-bf98-4152-ba1c-0d4cd639f476");}
+#img-2 {background-image: url("https://img-cf.kurly.com/banner/main/pc/img/2034081e-7c04-4842-b2f0-1975448b2c76");}
 #img-3 {background-color: rgb(121, 168, 255);}
 #img-4 {background-color: rgb(195, 121, 255);}
 #img-5 {background-color: rgb(255, 121, 222);}
@@ -618,9 +691,6 @@ footer{
     transition-delay: 0s;
 }
 
-#tmp-div{
-
-}
 #content-container{
     margin: 0 auto;
     width: 1050px;
